# Weather-Alerts-ACAP

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.build  LICENSE  README-Troubleshooting.md  README.md  demo.py  docker-compose.yml  manifest.json  package.conf
.github/workflows/: build.yml  test.yml
app/: CMakeLists.txt  LICENSE  Makefile  alerts.c  alerts.h  cJSON.c  cJSON.h  config.py  config_cgi.c  config_defaults.json  device_probe.py  event_engine.py  manifest.json  mock_weather.json  nws.c  nws.h  nws_client.py  openmeteo.c  openmeteo.h  overlay.c  overlay.h  overlay_manager.py  params.c  params.h  requirements.txt  vapix_client.py  weather_acap.c  weather_acap.py  weather_api.c  weather_api.h  web_ui.py
app/html/: index.html
app/templates/: index.html
tests/: conftest.py  requirements-test.txt  test_config.py  test_device_probe.py  test_event_engine.py  test_nws_client.py  test_overlay_manager.py  test_vapix_client.py  test_web_ui.py
